Bug Fix: #822 - IE fix for image collapse in admin - thanks to dadionline

--- a/2.1/catalog/admin/includes/stylesheet.css
+++ b/2.1/catalog/admin/includes/stylesheet.css
@@ -55,7 +55,7 @@ body { background-color: #ffffff; color: #000000; margin: 0px;
 /* EOF: Added: Setup Browser Scroll Bar */
 }
 
-img { border: 0; border-collapse: collapse; }
+img { border-collapse: collapse; border-top-style: none; border-right-style: none; border-bottom-style: none; border-left-style: none; height: auto; width: auto; }
 
 .headerBar { background-color: #B3BAC5; }
 .headerBarContent { font-family: Verdana, Arial, sans-serif; font-size: 10px; color: #ffffff; font-weight: bold; padding: 2px; }
